<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_other" >

    <TextView
        android:id="@+id/textView__li_comida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView1"
        android:layout_marginLeft="18dp"
        android:layout_toRightOf="@+id/imageView1"
        android:text="@string/acceso_docentes"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="53dp"
        android:src="@drawable/ic_docentes" />

    <TextView
        android:id="@+id/textView_li_medida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView__li_comida"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp"
        android:text="@string/calve_acceso"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editText_clave_login"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/textView_li_medida"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/my_textedit_style"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button_ingresar"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_clave_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:background="@drawable/button_selector"
        android:onClick="validarLoginDocente"
        android:text="@string/ingresar"
        android:textColor="@color/list_item_title" />

</RelativeLayout>